test_suite/alan-2022-examples/failing/004620_mutation.alan
source r begin leave get l end
